# controllers/cars.js
@@ -2,67 +2,73 @@ const { ObjectId } = require('mongodb');
 const mongodb = require('../data/database');
 
 const getSingle = async (req, res) => {
-  //#swagger.tags=['Contacts']
-  const contactId = new ObjectId(req.params.id);
-  const result = await mongodb.getDatabase().db().collection('contacts').find({ _id: contactId });
-  result.toArray().then((contacts) => {
+  //#swagger.tags=['cars']
+  const carId = new ObjectId(req.params.id);
+  const result = await mongodb.getDatabase().db().collection('cars').find({ _id: carId });
+  result.toArray().then((cars) => {
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(contacts[0]);
+    res.status(200).json(cars[0]);
   });
 };
 
 const getAll = async (req, res) => {
-  //#swagger.tags=['Contacts']
-  const result = await mongodb.getDatabase().db().collection('contacts').find();
-  result.toArray().then((contacts) => {
+  //#swagger.tags=['cars']
+  const result = await mongodb.getDatabase().db().collection('cars').find();
+  result.toArray().then((cars) => {
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(contacts);
+    res.status(200).json(cars);
   });
 };
 
-const createContact = async (req, res) => {
-  //#swagger.tags=['Contacts']
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+const createCar = async (req, res) => {
+  //#swagger.tags=['cars']
+  const car = {
+    year: req.body.year,
+    make: req.body.make,
+    model: req.body.model,
+    color: req.body.color,
+    engine: req.body.engine,
+    transmission: req.body.transmission,
+    gears: req.body.gears,
+    shifter: req.body.shifter
   };
-  const result = await mongodb.getDatabase().db().collection('contacts').insertOne(contact);
+  const result = await mongodb.getDatabase().db().collection('cars').insertOne(car);
   if (result.acknowledged) {
     res.status(204).send();
   } else {
-    res.status(500).json(response.error || 'Error occurred when creating contact.')
+    res.status(500).json(response.error || 'Error occurred when creating car.')
   }
 };
 
-const updateContact = async (req, res) => {
-  //#swagger.tags=['Contacts']
-  const contactId = new ObjectId(req.params.id);
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+const updateCar = async (req, res) => {
+  //#swagger.tags=['cars']
+  const carId = new ObjectId(req.params.id);
+  const car = {
+    year: req.body.year,
+    make: req.body.make,
+    model: req.body.model,
+    color: req.body.color,
+    engine: req.body.engine,
+    transmission: req.body.transmission,
+    gears: req.body.gears,
+    shifter: req.body.shifter
   };
-  const result = await mongodb.getDatabase().db().collection('contacts').replaceOne({ _id: contactId }, contact);
+  const result = await mongodb.getDatabase().db().collection('cars').replaceOne({ _id: carId }, car);
   if (result.modifiedCount > 0) {
     res.status(204).send();
   } else {
-    res.status(500).json(response.error || 'Error occurred when creating contact.')
+    res.status(500).json(response.error || 'Error occurred when creating car.')
   }
 };
 
-const deleteContact = async (req, res) => {
-  //#swagger.tags=['Contacts']
-  const contactId = new ObjectId(req.params.id);
-  const result = await mongodb.getDatabase().db().collection('contacts').deleteOne({ _id: contactId });
+const deleteCar = async (req, res) => {
+  //#swagger.tags=['cars']
+  const carId = new ObjectId(req.params.id);
+  const result = await mongodb.getDatabase().db().collection('cars').deleteOne({ _id: carId });
   if (result.deletedCount > 0) {
     res.status(204).send();
   } else {
-    res.status(500).json(response.error || 'Error occurred when deleting contact.')
+    res.status(500).json(response.error || 'Error occurred when deleting car.')
   }
 };
 
@@ -70,7 +76,7 @@ const deleteContact = async (req, res) => {
 module.exports = {
   getSingle,
   getAll,
-  createContact,
-  updateContact,
-  deleteContact
+  createCar,
+  updateCar,
+  deleteCar
 };
