# routes/cars.js
@@ -1,11 +1,10 @@
 const router = require('express').Router();
-const { carsValidationRules, validate } = require('../validator.js')
 const carsController = require('../controllers/cars.js');
 
 router.get('/:id', carsController.getSingle);
 router.get('/', carsController.getAll);
-router.post('/', carsValidationRules, validate, carsController.createContact);
-router.put('/:id', carsValidationRules, validate, carsController.updateContact);
-router.delete('/:id', carsController.deleteContact);
+router.post('/', carsController.createCar);
+router.put('/:id', carsController.updateCar);
+router.delete('/:id', carsController.deleteCar);
 
 module.exports = router;
